--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@vitest/coverage-v8": "2.1.4",
+    "nanoid": "5.0.8",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
     "tslib": "2.8.0",
