added: compose.up like real app example

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@grlt-hub/feature-compose",
+  "name": "@grlt-hub/app-compose",
   "version": "0.0.1",
   "description": "",
   "type": "module",
