--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "private": false,
   "scripts": {
-    "test": "vitest",
+    "test": "vitest --coverage",
     "knip": "knip"
   },
   "author": "Viktor Pasynok",
@@ -18,8 +18,7 @@
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
     "tslib": "2.8.1",
-    "typescript": "5.6.3",
-    "vite-tsconfig-paths": "5.0.1"
+    "typescript": "5.6.3"
   },
   "peerDependencies": {
     "effector": "23"
