--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,11 +22,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
-      - name: Run tests
-        run: npm test
-
-      - name: Lint
-        run: npm run lint
+      - name: Prepublish
+        run: make prepublish
