--- a/package.json
+++ b/package.json
@@ -38,5 +38,28 @@
   },
   "homepage": "https://github.com/grlt-hub/app-compose/blob/main/README.md",
   "description": "Create scalable, module-based applications with ease.",
-  "keywords": []
+  "keywords": [
+    "grlt",
+    "grlt-hub",
+    "modular",
+    "scalable",
+    "application-composition",
+    "module-based",
+    "app-composition",
+    "dependency-injection",
+    "dependency-management",
+    "framework",
+    "application-assembly",
+    "modularity",
+    "app-development",
+    "composable-architecture",
+    "container-management",
+    "software-architecture",
+    "reusable-components",
+    "app-structure",
+    "composable-framework",
+    "module-integration",
+    "project-structure",
+    "container-composition"
+  ]
 }
