--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "size-limit": "11.1.6",
     "tslib": "2.8.1",
     "tsup": "8.3.5",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3",
+    "vitest": "2.1.4"
   },
   "peerDependencies": {
     "effector": "23"
