--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grlt-hub/app-compose",
-  "version": "1.4.0",
+  "version": "2.0.0-next.0",
   "type": "module",
   "private": false,
   "main": "dist/index.js",
@@ -11,16 +11,16 @@
   "license": "MIT",
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.1.6",
-    "@vitest/coverage-v8": "2.1.4",
+    "@vitest/coverage-v8": "2.1.5",
     "clean-publish": "5.1.0",
-    "knip": "5.36.7",
+    "knip": "5.37.2",
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
     "size-limit": "11.1.6",
     "tslib": "2.8.1",
     "tsup": "8.3.5",
-    "typescript": "5.6.3",
-    "vitest": "2.1.4"
+    "typescript": "5.7.2",
+    "vitest": "2.1.5"
   },
   "peerDependencies": {
     "effector": "23"
