--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "license": "MIT",
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.1.6",
-    "@vitest/coverage-v8": "2.1.5",
+    "@vitest/coverage-v8": "2.1.8",
     "clean-publish": "5.1.0",
-    "knip": "5.37.2",
-    "prettier": "3.3.3",
+    "knip": "5.40.0",
+    "prettier": "3.4.2",
     "prettier-plugin-organize-imports": "4.1.0",
     "size-limit": "11.1.6",
     "tslib": "2.8.1",
     "tsup": "8.3.5",
     "typescript": "5.7.2",
-    "vitest": "2.1.5"
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "2.1.8"
   },
   "peerDependencies": {
     "effector": "23"
