added: pretty error output

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "peerDependencies": {
     "effector": "23"
   },
+  "dependencies": {
+    "dedent": "1"
+  },
   "publishConfig": {
     "access": "public"
   },
