added: diff cmd

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "effector": "23"
   },
   "dependencies": {
-    "dedent": "1"
+    "dedent": "1",
+    "picocolors": "1"
   },
   "publishConfig": {
     "access": "public"
