--- a/website/package.json
+++ b/website/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/starlight": "^0.30.3",
-    "astro": "5",
+    "@astrojs/starlight": "^0.31.1",
+    "astro": "^5.1.9",
     "sharp": "^0.33.5"
   }
 }
