--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grlt-hub/app-compose",
-  "version": "2.0.0-next.0",
+  "version": "2.0.0-next.1",
   "type": "module",
   "private": false,
   "main": "dist/index.js",
@@ -11,24 +11,20 @@
   "license": "MIT",
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.1.6",
-    "@vitest/coverage-v8": "2.1.8",
+    "@vitest/coverage-v8": "3.0.3",
     "clean-publish": "5.1.0",
-    "knip": "5.41.1",
+    "knip": "5.43.1",
     "prettier": "3.4.2",
     "prettier-plugin-organize-imports": "4.1.0",
     "size-limit": "11.1.6",
     "tslib": "2.8.1",
     "tsup": "8.3.5",
-    "typescript": "5.7.2",
+    "typescript": "5.7.3",
     "vite-tsconfig-paths": "5.1.4",
-    "vitest": "2.1.8"
+    "vitest": "3.0.3"
   },
   "peerDependencies": {
     "effector": "23"
-  },
-  "volta": {
-    "node": "22.9.0",
-    "npm": "10.9.0"
   },
   "publishConfig": {
     "access": "public"
@@ -61,6 +57,8 @@
     "composable-framework",
     "module-integration",
     "project-structure",
-    "container-composition"
+    "container-composition",
+    "frontend di",
+    "front-end di"
   ]
 }
