--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grlt-hub/app-compose",
-  "version": "2.0.0-next.3",
+  "version": "2.0.1",
   "type": "module",
   "private": false,
   "main": "dist/index.js",
