--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@grlt-hub/app-compose",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "type": "module",
   "private": false,
   "main": "dist/index.js",
@@ -17,6 +17,7 @@
     "prettier": "3.4.2",
     "prettier-plugin-organize-imports": "4.1.0",
     "size-limit": "11.1.6",
+    "terser": "5.37.0",
     "tslib": "2.8.1",
     "tsup": "8.3.6",
     "typescript": "5.7.3",
