--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "license": "MIT",
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.2.0",
-    "@vitest/coverage-v8": "3.2.4",
-    "clean-publish": "5.2.2",
-    "knip": "5.63.0",
+    "@vitest/coverage-v8": "^4.0.0",
+    "clean-publish": "6.0.1",
+    "knip": "5.67.1",
     "prettier": "3.6.2",
-    "prettier-plugin-organize-imports": "4.2.0",
+    "prettier-plugin-organize-imports": "4.3.0",
     "size-limit": "11.2.0",
-    "terser": "5.43.1",
+    "terser": "5.44.0",
     "tslib": "2.8.1",
     "tsup": "8.5.0",
-    "typescript": "5.9.2",
-    "vite-tsconfig-paths": "5.1.4",
-    "vitest": "3.2.4"
+    "typescript": "5.9.3",
+    "vitest": "^4.0.0"
   },
   "peerDependencies": {
     "effector": "23"
