--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.2.0",
-    "@vitest/coverage-v8": "^4.0.0",
+    "@vitest/coverage-v8": "3",
     "clean-publish": "6.0.1",
     "knip": "5.67.1",
     "prettier": "3.6.2",
@@ -21,7 +21,7 @@
     "tslib": "2.8.1",
     "tsup": "8.5.0",
     "typescript": "5.9.3",
-    "vitest": "^4.0.0"
+    "vitest": "3"
   },
   "peerDependencies": {
     "effector": "23"
