--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Viktor Pasynok",
   "license": "MIT",
   "scripts": {
+    "dev": "bun run ./src/createTask/sandbox.ts",
     "build": "rslib build",
     "lint": "knip",
     "test": "vitest"
